overflow issue

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
   
   html {
     scroll-behavior: smooth;
+    overflow: hidden;
   }
   
   ul li {
